[package]
name = "electrs-rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database (electrs fork)"
version = "0.15.0-e2"
edition = "2018"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>"]
repository = "https://github.com/rust-rocksdb/rust-rocksdb"
license = "Apache-2.0"
categories = [ "database" ]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/romanz/rust-rocksdb"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2"]
valgrind = []
snappy = ["electrs-librocksdb-sys/snappy"]
lz4 = ["electrs-librocksdb-sys/lz4"]
zstd = ["electrs-librocksdb-sys/zstd"]
zlib = ["electrs-librocksdb-sys/zlib"]
bzip2 = ["electrs-librocksdb-sys/bzip2"]

[dependencies]
libc = "0.2"
electrs-librocksdb-sys = { path = "librocksdb-sys", version = "6.11.4-e2" }

[dev-dependencies]
trybuild = "1.0.21"
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
