[package]
name = "electrs-librocksdb-sys"
version = "6.11.4-e2"
edition = "2018"
authors = ["Karl Hobley <karlhobley10@gmail.com>", "Arkadiy Paronyan <arkadiy@ethcore.io>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb (electrs fork)"
readme = "README.md"
repository = "https://github.com/romanz/rust-rocksdb"
keywords = [ "bindings", "ffi", "rocksdb" ]
categories = [ "api-bindings", "database", "external-ffi-bindings" ]
links = "rocksdb"

[features]
default = [ "static" ]
static = []
snappy = []
lz4 = []
zstd = []
zlib = []
bzip2 = []

[dependencies]
libc = "0.2"

[dev-dependencies]
const-cstr = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
cc = { version = "^1.0", features = ["parallel"] }
bindgen = { version = "0.55", default-features = false, features = ["runtime"] }
glob = "0.3"
